# fayasm

./: .gitignore  AGENTS.md  AI_REFERENCE.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.sh
external_ideas/: fa_compile.c  fa_compile.h  for_cycle.wasm
samples/cli-runner/: README.md  main.c
samples/esp32-trap/: README.md  main.c
samples/host-import/: README.md  host_add.c  main.c
src/: CMakeLists.txt  esp_log.h  fa_arch.h  fa_compile.c  fa_compile.h  fa_jit.c  fa_jit.h  fa_job.c  fa_job.h  fa_ops.c  fa_ops.h  fa_runtime.c  fa_runtime.h  fa_types.h  fa_wasm.c  fa_wasm.h  fa_wasm_stream.c  fa_wasm_stream.h
src/helpers/: dynamic_list.h
studies/asm/: aarch64_C_JIT.md  cJitRegisters.md  ita_justInTime.md  registersNoStoreLoad.md
studies/code_samples/: callbacks.c
studies/external_ideas/: operations_references.c
studies/runtime/: justInTime.c  prompt.md  test.c
studies/runtime/jit/: inRuntimeExec.c  runtimeCompiledFunctions.md
studies/wasm/: branchExamples.md  functionsSections.md  justInTimeParser.c  magic.md  notes.md  ops_reading.md  sectionsVsFunctions.md
test/: CMakeLists.txt  build.sh  main.c  test_branches_fa_wasm_stream.c  test_fa_wasm_stream.c
wasm_samples/: README.md  build.sh
wasm_samples/src/: advanced_runtime.c  advanced_runtime.rs  arithmetic.c  arithmetic.rs  control_flow.c  control_flow.rs  floating_point.c  floating_point.rs  indirect_dispatch.c  indirect_dispatch.rs  memory_ops.c  memory_ops.rs  typed_values.c  typed_values.rs
